--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,12 @@
 <html>
  
 <body>
-  <h1>QuarelinSan</h1>
+  <h1>QuarelinSan</h1> <br>
+  <h2>QuarelinSan</h2>
+  <h3>QuarelinSan</h2>
+  <h4>QuarelinSan</h2>
+  <h5>QuarelinSan</h2>
+  <h6>QuarelinSan</h2>
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
